# pychuck

./: .gitignore  README.md  chuck.py  example.py  main.py  pychuck.py  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  tutorial.rst
examples/: README.md  feature_extract.py  key.py  keyboard.py  poem.py  powerup.py  rave.py  sinosc.py  sndbuf.py  tmp.py
examples/analysis/: fft.py
examples/basic/: README.md  adc.py  adsr.py  alarm.py  blit.py  blit2.py  chirp.py  chirp2.py  comb.py  curly.py  delay.py  demo0.py  demo1.py  demo2.py  demo3.py  echo.py  envelope.py  fm.py  fm2.py  fm3.py  foo.py  foo2.py  func.py  i-robot.py  i_robot.py  imp.py  infnan.py  larry++.py  larry.py  lfo.py  moe.py  rec.py  ring.py  sndbuf.py  step.py  tick.py  tick2.py  unchuck.py  valueat.py  whirl.py  (+3 more)
examples/deep/: chant.py  dither.py  dtmf.py  follower.py  plu.py
examples/stk/: mandolin.py
pychuck/: __init__.py  core.py  io.py  module.py  util.py
pychuck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pychuck/module/: base.py  librosa.py  torch.py
src/pychuck/: __init__.py  core.py  gui.py  module.py  unit.py  util.py
src/pychuck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workspace/blender/: chuck.py  example.py
workspace/pygame/: canvas.py  chuck.py  circle.py  play.py
workspace/webchuck/: canvas.py  streamlit_app.py
workspace/webchuck/examples/: ADSR.py  Custom.py  Gain.py  Impulse.py  JCRev.py  SinOsc.py  SndBuf.py
workspace/wrapper/: compile.sh
wrapper/: stk_wrapper.cpp
