[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pychuck"
version = "1.0.1"
description = "Python implementation of music programming language Chuck"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["chuck", "music", "programming", "sound", "synthesis"]
authors = [
    { name = "Yikai Li", email = "yikaili@stanford.edu" },
]
maintainers = [
    { name = "Yikai Li", email = "yikaili@stanford.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

dependencies = [
    "numpy",
    "networkx",
    "sounddevice",
]

# dynamic = ["version", "description"]

[project.optional-dependencies]
gui = ["PyQt6-QScintilla"]
cli = []

[project.urls]
#homepage = "https://example.com"
documentation = "https://pychuck.readthedocs.io/en/latest/"
repository = "https://github.com/42x00/pychuck.git"
#changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
pychuck = "pychuck.core:main_cli"

[project.gui-scripts]
pyaudicle = "pychuck.core:main_gui"

#[project.entry-points."spam.magical"]
#tomatoes = "spam:main_tomatoes"